# EV-Dictionary

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Penguin_Dictionary  README.md  cmake_install.cmake  main.c  penguin_warriors  window.glade
EV-Dictionary/data/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  insert.c  main.c  penguin_warriors
EV-Dictionary/data/sqlite3/: CMakeLists.txt  Makefile  cmake_install.cmake
data/: #window.glade#  window.glade  window.glade~
glade/: main.c
libfdr/: fields.c
making/: #window (copy).glade#  Makefile  dictionary  main.c
mylib/: CMakeLists.txt
raw_data/: test.txt
sample.code/: CMakeLists.txt  phonebook.c
sample.code/order/: order.c
sample.code/sqlite/: add.c  delete.c  hoangmangstyle.c  insert.c  search.c  select.c  selectall.c  update.c
sempai/: README.md  dictionary  makefile
sempai/glade/: #window_main.glade#
sempai/src/: main.c
sources/: README.md
sqlite/: CMakeLists.txt
sqlite3/: Makefile  cmake_install.cmake
testgtk/: testgtk.c  testgtk2.c
